@@ -165,7 +165,7 @@ public class P86 {
         for (int i = 0; i < samples; i++) {
             int data = volumeTable[vol][pcmData[currentOffset] & 0xff];
 
-            data = (short) Math.max(Math.min(data, Short.MAX_VALUE), Short.MIN_VALUE);
+            data = (short) Math.clamp(data, Short.MIN_VALUE, Short.MAX_VALUE);
             buffer[0][i] += data;
             buffer[1][i] += data;
 
