@@ -124,7 +124,7 @@ public class Distortion {
 
     public void setReg(int adr, byte data) {
         if (adr == 0) {
-            currentCh = Math.max(Math.min(data & 0x3f, 38), 0);
+            currentCh = Math.clamp(data & 0x3f, 0, 38);
             if ((data & 0x80) != 0)
                 init();
         } else if (adr == 1) {
